# FractalAnalyzer

./: .gitignore  CHANGELOG.md  CONTRIBUTING  README.md  activate_fractal.sh  pyproject.toml  requirements.txt  setup.py  setup.py.back  test_optimized_import.py  test_package_imports.py  test_structure.py
Discussions/: Dalziel_mixing_theory.txt  box-counting-problems_6-19-25  chat-2JULY25.txt  chat_6_24_25-0.txt  chat_6_24_25-1.txt  chat_6_24_25-2.txt  chat_6_25_25-1.txt  chat_6_26_25-0.txt  multifractal_RT_paper_strategy.txt  multifractal_research_strategy.txt  publication_strategy_claude_6-19-25
Discussions/Codes/: Early-time_box_sizing_fix.py  early_time_validity_check_fix.py  rt_validity_check.py
backups/development_backups/: enhanced_analyzer.py.mode_fix_backup
docs/git_docs/: git_multi_machine_guidelines.aux  git_multi_machine_guidelines.out  git_multi_machine_guidelines.tex
docs/linearRT-claude/: linearRT-v2.tex  linearRT-v3.tex  linearRT-v4.tex  linearRT-v6.tex  linearRT-v7.aux  linearRT-v7.blg  linearRT-v7.out  linearRT-v7.tex  linearRT-v8.aux  linearRT-v8.blg  linearRT-v8.out  linearRT-v8.tex  linearRT.tex
fractal_analyzer/: __init__.py
fractal_analyzer/analysis/: __init__.py  enhanced_analyzer.py  enhanced_parallel_temporal_evolution_analyzer.py  fast_vtk_reader.py  hybred_parallel_resolution_convergence.py  multifractal_analyzer.py
fractal_analyzer/core/: __init__.py  conrec_extractor.py  dalziel_comparison.py  fractal_analyzer.py  fractal_analyzer.py.backup  fractal_analyzer.py.save  plic_extractor.py  rt_analyzer-v1.py  rt_analyzer.py  rt_analyzer.py.back  test_dalziel_h.py  updated_fractal_analyzer.py
fractal_analyzer/core/old_code/: fractal_analyzer-old.py  rt_analyzer-v3.py  rt_analyzer.py.backup.2  rt_analyzer.py.backup5
fractal_analyzer/legacy/: dalziel_mixing_extract.py  fractal_analyzer.py.backup.3JULY25
fractal_analyzer/legacy/core_old_code/: conrec_extractor_debug.py  fr2.py  multifractal_methods.py  rt_analyzer.py.backup.3  rt_analyzer.py.backup.4
fractal_analyzer/legacy/optimized_old_code/: parallel_resolution_times_resolutions.py  parallel_temporal_evolution_analyzer.py  resolution_comparison.py  temporal_evolution_analyzer.py
fractal_analyzer/optimized/: __init__.py  enhanced_hybred_resolution_convergence_analyzer.py  grid_cache_manager.py
fractal_analyzer/optimized/old_code/: parallel_resolution_comparison.py
fractal_analyzer/utils/: __init__.py  test_rt_optimization.py
fractal_analyzer/validation/: __init__.py  dalziel_Fig4_comp.py  dalziel_h.py  dalziel_jfm_comp.py  dalziel_power_spectrum.py  power_spectrum_analyzer.py
papers/: README.md
papers/ValidationPaper/: AMC_cover_letter.aux  AMC_cover_letter.tex  MCS_cover_letter.tex  bcfd_validation.aux  bcfd_validation.bbl  bcfd_validation.blg  bcfd_validation.out  bcfd_validation.tex  bcfd_validation_final.aux  bcfd_validation_final.blg  bcfd_validation_final.out  bcfd_validation_final.tex  bcfd_validation_near-final.tex  highlights.txt  references.bib
papers/ValidationPaper/AMCfiles/: bcfd_validation_final.tex  highlights.txt
papers/ValidationPaper/plots/pythonScripts/: cross-fractal-alg-intel-2.py  plot_5_fractals.py  plot_segments.py  plot_segments_fast.py  plot_segments_fast_read.py  simple-plot-5-fractals.py
papers/articles/: boxcountngbyclaude.txt
papers/draft1/: .gitignore  bcfd-els-new.aux  bcfd-els-new.bbl  bcfd-els-new.blg  bcfd-els-new.out  bcfd-els-new.tex  bcfd-els-rev-1.aux  bcfd-els-rev-1.bbl  bcfd-els-rev-1.blg  bcfd-els-rev-1.out  bcfd-els-rev-1.tex  bcfd-els-rev.aux  bcfd-els-rev.bbl  bcfd-els-rev.blg  bcfd-els-rev.out  bcfd-els-rev.tex  bcfd-els.aux  bcfd-els.bbl  bcfd-els.blg  bcfd-els.out  bcfd-els.tex  references.bib
papers/draft1/plots/pythonScripts/: cross-fractal-alg-intel.py  rt_plots.py
scripts/: __init__.py  analyze_temporal_improved.py  basic_resolution_convergence.py  rt_interface_debug.py  rt_interface_test_wo_conrec.py
scripts/debugScripts/: comp_test_suite.py  debug_test_3.py  improved_test3.py
scripts/hold/: analyze_temporal_improved.py  basic_resolution_convergence.py
scripts/optimized/: __init__.py  parallel_resolution_comparison.py  parallel_resolution_comparison_conrec.py  parallel_temporal_evolution_analyzer.py  parallel_temporal_evolution_analyzer_conrec.py  resolution_benchmark_optimized.py  run_perf_demo.sh  run_res_bench.sh
scripts/optimized/diagnosticTests/: debug_analyzer_test.py
scripts/optimized/performanceTests/: multi_timestep_test.py  performance_demo.py  resolution_benchmark_optimized.py  temporal_evolution_test.py
scripts/optimized/resolution_benchmark/: data
